Bug 89206. Get HTTP/HTTPS to work with socks proxies. Other protocols are broken though, and have been for some time. r/sr=dougt, sr=smfr